Inmob-Salesforce/force-app/main/default/objects/Event_Lead__e/Event_Lead__e.object-meta.xml
<CustomObject>
    <label>Event_Lead</label>
    <pluralLabel>Event_Lead</pluralLabel>
</CustomObject>