Inmob-Salesforce/force-app/main/default/objects/Event_Lead__e/fields/CI_LeadId__c.field-meta.xml
<CustomField>
    <fullName>CI_LeadId__c</fullName>
    <label>Id Prospecto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>