Inmob-Salesforce/force-app/main/default/objects/Event_Lead__e/fields/CI_New_Owner__c.field-meta.xml
<CustomField>
    <fullName>CI_New_Owner__c</fullName>
    <label>Nuevo Propietario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>