Inmob-Salesforce/force-app/main/default/objects/Event_Lead__e/fields/CI_Proyect__c.field-meta.xml
<CustomField>
    <fullName>CI_Proyect__c</fullName>
    <label>Proyecto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>