Inmob-Salesforce/force-app/main/default/objects/Event_Lead__e/fields/CI_Update_Lead__c.field-meta.xml
<CustomField>
    <fullName>CI_Update_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualizar Candidato</label>
    <type>Checkbox</type>
</CustomField>